Add initial complaint resource
